# cpp_template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: default.yml  release-github.yml
docs/: INSTALLATION.md  RUN.md
include/project/: project_class.hpp
src/: main.cpp  project_class.cpp
